--- a/index-ar/index.html
+++ b/index-ar/index.html
@@ -24,7 +24,7 @@
          
          <section class = "main">
              <div>
-                 <h2>مرحبا انا أحمد<br><span>مطور امامي</span></h2>
+                 <h2>مرحبا انا أحمد<br><span>مطور واجهةامامية</span></h2>
                  <h3>الهمك الى عالم التطوير</h3>
                  <a href="#services" class = "main-btn">أعرض خدماتي</a>
                  <div class = "social-icons">
