--- a/index.html
+++ b/index.html
@@ -19,7 +19,18 @@
                <a href="#services" class="c">Services</a>
                <a href="#certificates" class = "c">Certificates</a>
                <a href="#contact" class = "c">Contact</a>
-           </nav>       
+           </nav>
+             <ul class="lang-menu">
+               <li>
+                  <a href="./index.html" class="ar"><img src="./images/english.png" alt="" srcset=""></a>
+                </li>
+              <li>
+                <a href="./index-ar/index.html" class="ar"><img src="./images/arabic.png" alt="" srcset=""></a>
+             </li>
+                <li>
+                  <a href="./index-ru/index.html" class="ru"><img src="./images/russia.png" alt="" srcset=""></a>
+                </li>
+            </ul>       
          </header>
          
          <section class = "main">
