--- a/index-ar/index.html
+++ b/index-ar/index.html
@@ -19,7 +19,18 @@
                <a href="#services" class="c">الخدمات</a>
                <a href="#certificates" class = "c">الشهادات</a>
                <a href="#contact" class = "c">التواصل</a>
-           </nav>       
+           </nav> 
+           <ul class="lang-menu">
+             <li>
+               <a href="./index.html" class="ar"><img src="../images/arabic.png" alt="" srcset=""></a>
+            </li>
+            <li>
+               <a href="../index.html" class="ar"><img src="../images/english.png" alt="" srcset=""></a>
+             </li>
+             <li>
+               <a href="../index-ru/index.html" class="ru"><img src="../images/russia.png" alt="" srcset=""></a>
+             </li>
+         </ul>      
          </header>
          
          <section class = "main">
