--- a/index.html
+++ b/index.html
@@ -30,7 +30,21 @@
                 <li>
                   <a href="./index-ru/index.html" class="ru"><img src="./images/russia.png" alt="" srcset=""></a>
                 </li>
-            </ul>       
+            </ul>
+            <i class="fa-solid fa-bars tab toggle" style="color: #0000ff;"></i>    
+            <nav class="responsive_nav">
+              <div>
+                <h2>ahmed</h2>
+                <i class="fa-solid fa-x close" style="color: #0000ff;"></i>
+              </div>
+              <ul>
+                <li><a href="#about">about me</a></li>
+                <li><a href="#skills">skills</a></li>
+                <li><a href="#services">services</a></li>
+                <li><a href="#certificates">certificates</a></li>
+                <li><a href="#contact">contact</a></li>
+              </ul>
+            </nav>   
          </header>
          
          <section class = "main">
@@ -162,5 +176,6 @@
          <footer class="footer">
            <p class="footer-title">Copyrights @ <span>Ahmed Soliman</span></p>
          </footer>
+         <script src="./script/script.js"></script>
 </body>
 </html>
