--- a/index-ar/index.html
+++ b/index-ar/index.html
@@ -31,6 +31,20 @@
                <a href="../index-ru/index.html" class="ru"><img src="../images/russia.png" alt="" srcset=""></a>
              </li>
          </ul>      
+         <i class="fa-solid fa-bars tab toggle" style="color: #0000ff;"></i>    
+            <nav class="responsive_nav">
+              <div>
+                <h2>ahmed</h2>
+                <i class="fa-solid fa-x close" style="color: #0000ff;"></i>
+              </div>
+              <ul>
+                <li><a href="#about">عني</a></li>
+                <li><a href="#skills">المهارات</a></li>
+                <li><a href="#services">الخدمات</a></li>
+                <li><a href="#certificates">الشهادات</a></li>
+                <li><a href="#contact">التواصل</a></li>
+              </ul>
+            </nav>  
          </header>
          
          <section class = "main">
@@ -162,5 +176,6 @@
          <footer class="footer">
            <p class="footer-title">جميع الحقوق @ <span>أحمد سليمان</span></p>
          </footer>
+         <script src="../script/script.js"></script>
 </body>
 </html>
