--- a/index-ru/index.html
+++ b/index-ru/index.html
@@ -30,12 +30,26 @@
            <li>
              <a href="../index-ar/index.html" class="ar"><img src="../images/arabic.png" alt="" srcset=""></a>
           </li>
-         </ul>        
+         </ul>     
+         <i class="fa-solid fa-bars tab toggle" style="color: #0000ff;"></i>    
+            <nav class="responsive_nav">
+              <div>
+                <h2>ahmed</h2>
+                <i class="fa-solid fa-x close" style="color: #0000ff;"></i>
+              </div>
+              <ul>
+                <li><a href="#about">Обо мне</a></li>
+                <li><a href="#skills">Hавыки</a></li>
+                <li><a href="#services">Услуги</a></li>
+                <li><a href="#certificates">Сертификаты</a></li>
+                <li><a href="#contact">Контакт</a></li>
+              </ul>
+            </nav>     
          </header>
          
          <section class = "main">
              <div>
-                 <h2>Здравствуйте, я Ахмед<br><span style="font-size: 3.5rem;">фронтенд-разработчик</span></h2>
+                 <h2>Здравствуйте, я Ахмед<br><span style="font-size: 2.5rem;">фронтенд-разработчик</span></h2>
                  <h3>Вдохновляю в мир <br> фронтенд-разработки!</h3>
                  <a href="#services" class = "main-btn">Посмотреть мои услуги</a>
                  <div class = "social-icons">
@@ -162,5 +176,6 @@
          <footer class="footer">
            <p class="footer-title">Авторские права @ <span>Ахмед Солиман</span></p>
          </footer>
+         <script src="../script/script.js"></script>
 </body>
 </html>
